--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/KaykyDeSouzaDias/mood-fi-livestream-database#readme",
   "devDependencies": {
+    "@types/node": "^20.8.4",
     "axios": "^1.5.1",
     "typescript": "^5.2.2"
   }
