--- a/.github/workflows/livestream_update_system.yml
+++ b/.github/workflows/livestream_update_system.yml
@@ -1,8 +1,8 @@
 name: Mood-Fi Live stream Updater
 
-on:
-  schedule:
-    - cron: '0 0 * * *' 
+on: workflow_dispatch
+#   schedule:
+#     - cron: '0 0 * * *' 
 
 jobs:
   update-moodfi-gist-database:
