Fix: project build before execution

--- a/.github/workflows/livestream_update_system.yml
+++ b/.github/workflows/livestream_update_system.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Run TypeScript Script
         run: |
           npm install
+          npm run build
           npm start
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
