--- a/.github/workflows/livestream_update_system.yml
+++ b/.github/workflows/livestream_update_system.yml
@@ -22,5 +22,5 @@ jobs:
           npm run build
           npm start
         env:
-          GITHUB_TOKEN: ${{ secrets.DATABASE_GIST_PERSONAL_TOKEN }}
+          DATABASE_GIST_PERSONAL_TOKEN: ${{ secrets.DATABASE_GIST_PERSONAL_TOKEN }}
           YOUTUBE_API_KEY: ${{ secrets.YOUTUBE_API_KEY }}
